objects/Bill_to_Customer__c/Bill_to_Customer__c.object-meta.xml
<CustomObject>
    <label>Bill-to Customer xx</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill-to Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>