objects/Bill_to_Customer__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Bill_to_Customers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>