objects/Bill_to_Customer__c/fields/Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Executive</label>
    <referenceTo>Salesperson__c</referenceTo>
    <relationshipName>Bill_to_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>