objects/Bill_to_Customer__c/fields/Corporate__c.field-meta.xml
<CustomField>
    <fullName>Corporate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate</label>
    <referenceTo>Corporate__c</referenceTo>
    <relationshipName>Bill_to_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>