objects/Bill_to_Customer__c/fields/Corporate_Account__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Bill_to_Customers1</relationshipName>
    <type>Lookup</type>
</CustomField>