objects/Bill_to_Customer__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>10</length>
    <type>Text</type>
</CustomField>