objects/Bill_to_Customer__c/fields/Customer_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_No__c</fullName>
    <externalId>true</externalId>
    <label>Customer No.</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>