objects/Bill_to_Customer__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UTILITIES</fullName>
            </value>
            <value>
                <fullName>TRANS</fullName>
            </value>
            <value>
                <fullName>STEEL</fullName>
            </value>
            <value>
                <fullName>SCHOOLS</fullName>
            </value>
            <value>
                <fullName>RESIDENCE</fullName>
            </value>
            <value>
                <fullName>PROPERTY</fullName>
            </value>
            <value>
                <fullName>PHARMACEUTICAL</fullName>
            </value>
            <value>
                <fullName>PETROLEUM</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>OIL AND GAS</fullName>
            </value>
            <value>
                <fullName>OIL &amp; GAS</fullName>
            </value>
            <value>
                <fullName>MARINE</fullName>
            </value>
            <value>
                <fullName>MANU</fullName>
            </value>
            <value>
                <fullName>LAB</fullName>
            </value>
            <value>
                <fullName>INSURANCE</fullName>
            </value>
            <value>
                <fullName>I/C</fullName>
            </value>
            <value>
                <fullName>HOSPITAL</fullName>
            </value>
            <value>
                <fullName>GSA</fullName>
            </value>
            <value>
                <fullName>GOVERNMENT</fullName>
            </value>
            <value>
                <fullName>CONTRACTOR</fullName>
            </value>
            <value>
                <fullName>CONSULTANT-ENGINEER</fullName>
            </value>
            <value>
                <fullName>CONSTRUCTION</fullName>
            </value>
            <value>
                <fullName>CHEMICAL</fullName>
            </value>
            <value>
                <fullName>AUTOMOBILE</fullName>
            </value>
            <value>
                <fullName>AUTOMBILE</fullName>
            </value>
            <value>
                <fullName>AGR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>