objects/Bill_to_Customer__c/fields/Missing_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Missing_Corporate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing Corporate</label>
    <type>Checkbox</type>
</CustomField>