objects/Bill_to_Customer__c/fields/Sage_Customer_No__c.field-meta.xml
<CustomField>
    <fullName>Sage_Customer_No__c</fullName>
    <label>Sage Customer No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>