objects/Bill_to_Customer__c/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesperson</label>
    <referenceTo>Salesperson__c</referenceTo>
    <relationshipName>Bill_to_Customers1</relationshipName>
    <type>Lookup</type>
</CustomField>