objects/Bill_to_Customer__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>