objects/Bill_to_Customer__c/fields/Subsidiary_Company__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Company__c</fullName>
    <label>Subsidiary Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-ACV ENVIRO</fullName>
            </value>
            <value>
                <fullName>2-CYCLE CHEM., INC.</fullName>
            </value>
            <value>
                <fullName>3-DEEP GREEN</fullName>
            </value>
            <value>
                <fullName>4-ENVIROTECH CONSULTANTS LLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>